updated survey questions
